# Hybrid-Testbed

./: README.md
Hybrid-Testbed/Open Loop Control/KAW- Control/Electrical_Docs/: kawII_ortcam.drawio
Kawasaki_FFF/: K2_craft_0.0.4.py
Kawasaki_FFF/K2_PLC_code/Kaw_PLC_code_0.0.4/: Kaw_PLC_code_0.0.4.ino
Kawasaki_FFF/K2craft_latest/K2_craft_0.0.4_workspace/: K2_craft_0.0.4.py
Open Loop Control/KAW- Control/khi2cpp_hw/: CMakeLists.txt  khi2cpp_hw.xml  package.xml
Open Loop Control/KAW- Control/khi2cpp_hw/bringup/config/: cx110l_controller.yaml  cx165l_controller.yaml
Open Loop Control/KAW- Control/khi2cpp_hw/bringup/launch/: cx110l_controller.launch.py  send_trajectory.launch.py
Open Loop Control/KAW- Control/khi2cpp_hw/description/launch/: view_cx110l.launch.py
Open Loop Control/KAW- Control/khi2cpp_hw/description/ros2_control/: cx110l.ros2_control.xacro
Open Loop Control/KAW- Control/khi2cpp_hw/description/urdf/: cx110l.urdf.xacro
Open Loop Control/KAW- Control/khi2cpp_hw/src/: khi_cnt_interface.cpp  khi_hw_interface.cpp  khi_krnx_driver.cpp  main.cpp
Open Loop Control/KAW- Control/khi2cpp_hw/src/include/: khi_cnt_interface.hpp  khi_hw_interface.hpp  khi_krnx_driver.h  khi_robot_driver.h  krnx.h
Open Loop Control/KAW- Control/khi2cpp_hw_description/: CMakeLists.txt  package.xml
Open Loop Control/KAW- Control/khi2cpp_hw_description/cx110l/srdf/: cx110l.srdf
Open Loop Control/KAW- Control/khi2cpp_hw_description/cx110l/urdf/: cx110l_description.urdf.xacro
ros_additive_manufacturing-melodic/ros_additive_manufacturing-melodic/: .gitignore  .gitlab-ci.yml
ros_additive_manufacturing-melodic/ros_additive_manufacturing-melodic/ram_documentation/: CMakeLists.txt  package.xml
ros_additive_manufacturing-melodic/ros_additive_manufacturing-melodic/ram_path_planning/src/clipper/: clipper.cpp
ros_additive_manufacturing-melodic/ros_additive_manufacturing-melodic/yaml_generators/: CMakeLists.txt  include  src
