<?xml version="1.0"?>
<package format="2">
  <name>ram_documentation</name>
  <version>0.0.4</version>
  <description>A user guide of ROS Additive Manufacturing</description>

  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
